--- a/accounting-reporting/src/IncomeStatementDetailsTemplate.jrxml
+++ b/accounting-reporting/src/IncomeStatementDetailsTemplate.jrxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="IncomeStatementTemplate" pageWidth="595" pageHeight="842" columnWidth="459" leftMargin="68" rightMargin="68" topMargin="40" bottomMargin="40" uuid="90d1ed32-da72-42a1-9e3a-e1dfeba7192c">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="IncomeStatementDetailsTemplate" pageWidth="595" pageHeight="842" columnWidth="459" leftMargin="68" rightMargin="68" topMargin="40" bottomMargin="40" uuid="90d1ed32-da72-42a1-9e3a-e1dfeba7192c">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
@@ -24,12 +24,12 @@
 				<textFieldExpression><![CDATA[$F{incomeStatement.title}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="c8508bbd-eeb6-478e-90d8-7a00fad192e2" style="INVOICE_TX_10" x="0" y="32" width="75" height="20"/>
+				<reportElement uuid="c8508bbd-eeb6-478e-90d8-7a00fad192e2" style="INVOICE_TX_10" x="0" y="32" width="100" height="20"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{incomeStatement}.getFrom()]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="c8508bbd-eeb6-478e-90d8-7a00fad192e2" style="INVOICE_TX_10" x="75" y="32" width="75" height="20"/>
+				<reportElement uuid="c8508bbd-eeb6-478e-90d8-7a00fad192e2" style="INVOICE_TX_10" x="100" y="32" width="100" height="20"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{incomeStatement}.getUntil()]]></textFieldExpression>
 			</textField>
@@ -107,7 +107,7 @@
 			<subreport>
 				<reportElement uuid="595abc0c-6e9f-4029-9200-fccc6717672b" x="0" y="21" width="459" height="20" isRemoveLineWhenBlank="true"/>
 				<dataSourceExpression><![CDATA[$P{REPORT_PARAMETERS_MAP}.get("OPEX_DETAILS")]]></dataSourceExpression>
-				<subreportExpression><![CDATA["IncomeStatementSubreport.jasper"]]></subreportExpression>
+				<subreportExpression><![CDATA["IncomeStatementDetailsSubreport.jasper"]]></subreportExpression>
 			</subreport>
 		</band>
 		<band height="23" splitType="Stretch">
@@ -159,7 +159,7 @@
 			<subreport>
 				<reportElement uuid="2be2af1b-b289-4e10-a748-7bb78687ed8e" x="0" y="20" width="459" height="20" isRemoveLineWhenBlank="true"/>
 				<dataSourceExpression><![CDATA[$P{REPORT_PARAMETERS_MAP}.get("DEPRECIATION_DETAILS")]]></dataSourceExpression>
-				<subreportExpression><![CDATA["IncomeStatementSubreport.jasper"]]></subreportExpression>
+				<subreportExpression><![CDATA["IncomeStatementDetailsSubreport.jasper"]]></subreportExpression>
 			</subreport>
 		</band>
 		<band height="23">
@@ -216,7 +216,7 @@
 			<subreport>
 				<reportElement uuid="595abc0c-6e9f-4029-9200-fccc6717672b" x="0" y="30" width="459" height="20" isRemoveLineWhenBlank="true"/>
 				<dataSourceExpression><![CDATA[$P{REPORT_PARAMETERS_MAP}.get("CAPEX_DETAILS")]]></dataSourceExpression>
-				<subreportExpression><![CDATA["IncomeStatementSubreport.jasper"]]></subreportExpression>
+				<subreportExpression><![CDATA["IncomeStatementDetailsSubreport.jasper"]]></subreportExpression>
 			</subreport>
 		</band>
 		<band height="50" splitType="Stretch">
@@ -244,7 +244,7 @@
 			<subreport>
 				<reportElement uuid="2be2af1b-b289-4e10-a748-7bb78687ed8e" x="0" y="30" width="459" height="20" isRemoveLineWhenBlank="true"/>
 				<dataSourceExpression><![CDATA[$P{REPORT_PARAMETERS_MAP}.get("OTHER_EXPENSES_DETAILS")]]></dataSourceExpression>
-				<subreportExpression><![CDATA["IncomeStatementSubreport.jasper"]]></subreportExpression>
+				<subreportExpression><![CDATA["IncomeStatementDetailsSubreport.jasper"]]></subreportExpression>
 			</subreport>
 		</band>
 	</detail>
