--- a/accounting-reporting/src/IncomeStatementSummaryTemplate.jrxml
+++ b/accounting-reporting/src/IncomeStatementSummaryTemplate.jrxml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="CashFlowTemplate" pageWidth="595" pageHeight="842" columnWidth="459" leftMargin="68" rightMargin="68" topMargin="40" bottomMargin="40" uuid="90d1ed32-da72-42a1-9e3a-e1dfeba7192c">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="IncomeStatementSummaryTemplate" pageWidth="595" pageHeight="842" columnWidth="459" leftMargin="68" rightMargin="68" topMargin="40" bottomMargin="40" uuid="90d1ed32-da72-42a1-9e3a-e1dfeba7192c">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<template><![CDATA["InvoiceStyleSheet.jrtx"]]></template>
-	<field name="cashflow" class="de.togginho.accounting.reporting.CashFlowWrapper"/>
-	<field name="cashflow.title" class="java.lang.String"/>
-	<field name="from.title" class="java.lang.String"/>
-	<field name="until.title" class="java.lang.String"/>
+	<field name="incomeStatement" class="de.togginho.accounting.reporting.IncomeStatementWrapper"/>
+	<field name="incomeStatementSummary.title" class="java.lang.String"/>
 	<field name="revenue.title" class="java.lang.String"/>
 	<field name="net.title" class="java.lang.String"/>
 	<field name="gross.title" class="java.lang.String"/>
@@ -20,39 +18,28 @@
 	<field name="input.tax.title" class="java.lang.String"/>
 	<field name="tax.sum.title" class="java.lang.String"/>
 	<field name="result.title" class="java.lang.String"/>
-	<field name="gross.profit.title" class="java.lang.String"/>
+	<field name="operating.profit.title" class="java.lang.String"/>
 	<title>
-		<band height="32" splitType="Stretch">
+		<band height="55" splitType="Stretch">
 			<textField>
-				<reportElement uuid="ef3c179c-4291-4afa-a123-7d4a359192f0" style="INVOICE_TX_18B" x="0" y="0" width="183" height="32"/>
+				<reportElement uuid="ef3c179c-4291-4afa-a123-7d4a359192f0" style="INVOICE_TX_18B" x="0" y="0" width="300" height="32"/>
 				<textElement/>
-				<textFieldExpression><![CDATA[$F{cashflow.title}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{incomeStatementSummary.title}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement uuid="c8508bbd-eeb6-478e-90d8-7a00fad192e2" style="INVOICE_TX_10" x="0" y="32" width="100" height="20"/>
+				<textElement textAlignment="Left" verticalAlignment="Middle"/>
+				<textFieldExpression><![CDATA[$F{incomeStatement}.getFrom()]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement uuid="c8508bbd-eeb6-478e-90d8-7a00fad192e2" style="INVOICE_TX_10" x="100" y="32" width="100" height="20"/>
+				<textElement textAlignment="Left" verticalAlignment="Middle"/>
+				<textFieldExpression><![CDATA[$F{incomeStatement}.getUntil()]]></textFieldExpression>
 			</textField>
 		</band>
 	</title>
 	<pageHeader>
-		<band height="30" splitType="Stretch">
-			<textField>
-				<reportElement uuid="65c5668f-fade-4c0e-8acb-87750d728c04" style="INVOICE_TX_12" x="165" y="5" width="70" height="20"/>
-				<textElement/>
-				<textFieldExpression><![CDATA[$F{cashflow}.getUntilDate()]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement uuid="f9b3ae2f-7865-4ef0-82a8-117e93b79782" style="INVOICE_TX_12" x="0" y="5" width="40" height="20"/>
-				<textElement/>
-				<textFieldExpression><![CDATA[$F{from.title}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement uuid="780034af-5cc3-4c49-b9b8-d2616aa9bb2d" style="INVOICE_TX_12" x="120" y="5" width="40" height="20"/>
-				<textElement/>
-				<textFieldExpression><![CDATA[$F{until.title}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement uuid="c3a0f695-0240-47d1-8e97-14ff1d68d631" style="INVOICE_TX_12" x="45" y="5" width="70" height="20"/>
-				<textElement/>
-				<textFieldExpression><![CDATA[$F{cashflow}.getFromDate()]]></textFieldExpression>
-			</textField>
-		</band>
+		<band height="30" splitType="Stretch"/>
 	</pageHeader>
 	<detail>
 		<band height="365" splitType="Stretch">
@@ -75,7 +62,7 @@
 			<textField>
 				<reportElement uuid="89298149-8152-47ae-84be-4ef44bc197b4" style="INVOICE_TX_12" x="55" y="25" width="75" height="20"/>
 				<textElement textAlignment="Right"/>
-				<textFieldExpression><![CDATA[$F{cashflow}.getTotalRevenueNet()]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{incomeStatement}.getRevenueNet()]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement uuid="d2c231c7-c4f3-4d41-a880-8d0b44ae5caa" style="INVOICE_TX_12" x="0" y="45" width="50" height="20"/>
@@ -85,7 +72,7 @@
 			<textField>
 				<reportElement uuid="6096822e-a757-43d5-926b-1dda4a5bb868" style="INVOICE_TX_12" x="55" y="45" width="75" height="20"/>
 				<textElement textAlignment="Right"/>
-				<textFieldExpression><![CDATA[$F{cashflow}.getTotalRevenueGross()]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{incomeStatement}.getRevenueGross()]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement uuid="4919ef3b-79e9-4e5e-93aa-789247b5f16c" style="INVOICE_TX_12" x="0" y="65" width="50" height="20"/>
@@ -95,7 +82,7 @@
 			<textField>
 				<reportElement uuid="cc291e2d-824e-4701-aa57-cf94c4fde19c" style="INVOICE_TX_12" x="55" y="65" width="75" height="20"/>
 				<textElement textAlignment="Right"/>
-				<textFieldExpression><![CDATA[$F{cashflow}.getTotalRevenueTaxes()]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{incomeStatement}.getRevenueTax()]]></textFieldExpression>
 			</textField>
 			<line>
 				<reportElement uuid="32ad5ede-906c-4801-a251-3307003e25aa" x="0" y="90" width="459" height="1"/>
@@ -121,7 +108,7 @@
 			<textField>
 				<reportElement uuid="9190817e-cb2d-4225-865e-df6fbd81e145" style="INVOICE_TX_12" x="60" y="135" width="100" height="20"/>
 				<textElement textAlignment="Left"/>
-				<textFieldExpression><![CDATA[$F{cashflow}.getOpexNet()]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{incomeStatement}.getOpexNet()]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement uuid="f5d413b4-45e1-444e-a37e-9f9806c1b2b6" style="INVOICE_TX_12" x="10" y="155" width="50" height="20"/>
@@ -131,7 +118,7 @@
 			<textField>
 				<reportElement uuid="74469ff8-dfe2-4dbd-af1f-4a8072c0ca90" style="INVOICE_TX_12" x="60" y="155" width="100" height="20"/>
 				<textElement textAlignment="Left"/>
-				<textFieldExpression><![CDATA[$F{cashflow}.getOpexGross()]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{incomeStatement}.getOpexGross()]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement uuid="d8da52cd-6d3e-42cf-9a22-f325bb267c90" style="INVOICE_TX_12" x="10" y="175" width="50" height="20"/>
@@ -141,7 +128,7 @@
 			<textField>
 				<reportElement uuid="3968c479-8411-4e7d-9cf2-35540fbdb360" style="INVOICE_TX_12" x="60" y="175" width="100" height="20"/>
 				<textElement textAlignment="Left"/>
-				<textFieldExpression><![CDATA[$F{cashflow}.getOpexTax()]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{incomeStatement}.getOpexTax()]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement uuid="a12fdab8-be4f-4223-8aa9-2ee7e732c6d8" style="INVOICE_TX_12B" x="240" y="115" width="150" height="20"/>
@@ -156,7 +143,7 @@
 			<textField>
 				<reportElement uuid="399d01ea-cf1c-49c6-9623-9870c8e062b4" style="INVOICE_TX_12" x="290" y="135" width="100" height="20"/>
 				<textElement textAlignment="Left"/>
-				<textFieldExpression><![CDATA[$F{cashflow}.getTotalCostsNet()]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{incomeStatement}.getTotalCostsNet()]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement uuid="8ac71158-f819-46a9-ac3e-e48b42d44c34" style="INVOICE_TX_12" x="240" y="155" width="50" height="20"/>
@@ -166,7 +153,7 @@
 			<textField>
 				<reportElement uuid="b103d068-f81f-499e-ba1f-6574bf57c881" style="INVOICE_TX_12" x="290" y="155" width="100" height="20"/>
 				<textElement textAlignment="Left"/>
-				<textFieldExpression><![CDATA[$F{cashflow}.getTotalCostsGross()]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{incomeStatement}.getTotalCostsGross()]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement uuid="fa0114b2-7989-469f-971c-dd9ca9b8544d" style="INVOICE_TX_12" x="240" y="175" width="50" height="20"/>
@@ -176,7 +163,7 @@
 			<textField>
 				<reportElement uuid="59b8fe57-6046-4e5c-91f5-5b3c99b9872a" style="INVOICE_TX_12" x="290" y="175" width="100" height="20"/>
 				<textElement textAlignment="Left"/>
-				<textFieldExpression><![CDATA[$F{cashflow}.getTotalCostsTax()]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{incomeStatement}.getTotalCostsTax()]]></textFieldExpression>
 			</textField>
 			<line>
 				<reportElement uuid="4f001b84-9a9f-4cc2-a29e-84461e7e8929" x="0" y="200" width="459" height="1"/>
@@ -197,7 +184,7 @@
 			<textField>
 				<reportElement uuid="1cbf0b93-10e4-4d14-8c97-6b88b1d9838c" style="INVOICE_TX_12" x="105" y="225" width="75" height="20"/>
 				<textElement textAlignment="Right"/>
-				<textFieldExpression><![CDATA[$F{cashflow}.getOutputTax()]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{incomeStatement}.getOutputTax()]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement uuid="8cc9aa02-41f8-4328-929f-6a48e6f39b61" style="INVOICE_TX_12" x="0" y="245" width="100" height="20"/>
@@ -207,7 +194,7 @@
 			<textField>
 				<reportElement uuid="de696466-308f-4e6a-a5bd-d6a5de65325a" style="INVOICE_TX_12" x="105" y="245" width="75" height="20"/>
 				<textElement textAlignment="Right"/>
-				<textFieldExpression><![CDATA[$F{cashflow}.getInputTax()]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{incomeStatement}.getInputTax()]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement uuid="433e7bf9-51a5-4fb1-8f8a-8bda255c82b3" style="INVOICE_TX_12" x="0" y="265" width="100" height="20"/>
@@ -217,7 +204,7 @@
 			<textField>
 				<reportElement uuid="b98d7fda-196f-415e-9ed4-60b8504abac9" style="INVOICE_TX_12" x="105" y="265" width="75" height="20"/>
 				<textElement textAlignment="Right"/>
-				<textFieldExpression><![CDATA[$F{cashflow}.getTaxSum()]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{incomeStatement}.getTaxSum()]]></textFieldExpression>
 			</textField>
 			<line>
 				<reportElement uuid="89fec85b-f29d-4b02-a16d-fa7c36f927fd" x="0" y="290" width="459" height="1"/>
@@ -233,12 +220,12 @@
 			<textField>
 				<reportElement uuid="96484215-07fe-43bb-885e-715e61bad581" style="INVOICE_TX_12B" x="0" y="321" width="100" height="20"/>
 				<textElement textAlignment="Left"/>
-				<textFieldExpression><![CDATA[$F{gross.profit.title}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{operating.profit.title}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement uuid="ad684a21-6bce-42e0-8313-9621f00de8d5" style="INVOICE_TX_12B" x="105" y="321" width="75" height="20"/>
 				<textElement textAlignment="Right"/>
-				<textFieldExpression><![CDATA[$F{cashflow}.getGrossProfit()]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{incomeStatement}.getEBITDAnet()]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
